# test-technique-22-04-2026

./: .env.example  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/films/: asgi.py  models.py  serializers.py  settings.py  urls.py  wsgi.py
backend/movies/: models.py  serializers.py  settings.py  urls.py  views.py
backend/movies/migrations/: 0001_initial.py
bruno/: DELETE actors.yml  DELETE movies.yml  DELETE reviews.yml  GET actors.yml  GET movies.yml  GET reviews.yml  POST actors.yml  POST movies.yml  POST reviews.yml  PUT actors.yml  PUT movies.yml  PUT reviews.yml  opencollection.yml
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/api/: actors.ts  movies.ts  reviews.ts  types.ts
frontend/src/components/: AppPagination.vue  ManageModal.vue  PaginatedList.vue
frontend/src/hooks/: useCrudForm.ts
frontend/src/router/: index.ts
frontend/src/services/: actors.ts  movies.ts  reviews.ts
frontend/src/views/: ActorsView.vue  MovieView.vue  MoviesView.vue
