[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "films"
version = "0.1.0"
description = "Django project with Django REST Framework"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

authors = [
  { name = "Julien Aldon", email = "julien.aldon@wanadoo.fr" }
]

dependencies = [
  "Django==6.0.4",
  "djangorestframework",
  "psycopg==3.3.3",
]